ensured that the upload works but the course code is breaking

--- a/RESULTIFYAPP/templates/hod_template/success_add_assessment.html
+++ b/RESULTIFYAPP/templates/hod_template/success_add_assessment.html
@@ -1,16 +1,11 @@
 {% extends 'hod_template/base_template.html' %}
 {% block page_title %}
-    Add An Assessment
+Assessment Success
 {% endblock page_title %}
 {% block main_content %}
-
     <section class="content">
         <div class="container-fluid">
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Upload</button>
-            </form>
+            You have Successfully uploaded an Assessment
         </div>
     </section>
 {% endblock %}
